<resources>
    <!--

    == Base Strings For the App ==

     -->
    <string name="app_name">Shop with Friends</string>
    <string name="pager_title_shopping_lists">Shopping Lists</string>
    <string name="pager_title_meals">Meals</string>
    <string name="pager_title_profile">Profile</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="text_you">You</string>
    <string name="positive_button_yes">Yes</string>


    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>

    <!-- Menu Strings -->
    <string name="action_logout">Logout</string>
    <string name="action_share_list">Share List</string>
    <string name="action_sort">Sort</string>
    <string name="action_remove_list">Remove list</string>
    <string name="action_archive">Archive</string>


    <!--

    == Active List Strings ==

     -->
    <!-- Add List Dialog-->
    <string name="hint_add_shopping_list">Create a list</string>

    <!-- List of Shopping Lists Strings -->
    <string name="created_by">Created by </string>
    <string name="person_shopping">%d person shopping</string>
    <string name="people_shopping">%d people shopping</string>


    <!--

     == Active List Details Strings ==

      -->
    <!-- Activity Title  -->
    <string name="title_activity_list_details">List Details</string>
    <string name="hint_add_item">Add an item</string>

    <!-- Menu Items -->
    <string name="action_edit_list_name">Edit list name</string>

    <!-- Edit List and Add Item Dialogs -->
    <string name="positive_button_add_list_item">Add item</string>
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_list">Are you sure you want to remove this list?</string>
    <string name="dialog_message_are_you_sure_remove_item">Are you sure you want to remove this item?</string>

    <!-- Shopping Mode -->
    <string name="button_stop_shopping">Stop Shopping</string>
    <string name="button_start_shopping">Start Shopping</string>

    <string name="text_you_are_shopping">You are shopping</string>
    <string name="text_you_and_other_are_shopping">You and %s are shopping</string>
    <string name="text_you_and_number_are_shopping">You and %d others are shopping</string>

    <string name="text_other_is_shopping">%s is shopping</string>
    <string name="text_other_and_other_are_shopping">%1$s and %2$s are shopping</string>
    <string name="text_other_and_number_are_shopping">%1$s and %2$d others are shopping</string>

    <string name="bought_by">Bought by</string>

    <!--

     == Meal Strings ==

      -->

    <!-- Activity Title  -->
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_add_items_from_meal">Add Meal</string>

    <!-- Add, Edit and Remove Meal Dialogs -->
    <string name="hint_add_meal">Create a meal</string>
    <string name="dialog_title_remove_meal">Remove meal</string>
    <string name="dialog_message_are_you_sure_remove_meal">Are you sure you want to remove this meal?</string>
    <string name="hint_enter_meal_name">Enter meal name</string>


    <!--

     == Archived List Strings ==

      -->
    <!-- Activity Titles  -->
    <string name="title_activity_archived_lists">Archived Lists</string>
    <string name="title_activity_archived_list_details">Archived List Details</string>


    <!-- Archive Dialogs  -->
    <string name="dialog_title_copy_list">Copy List</string>
    <string name="dialog_title_archive_list">Archive list</string>
    <string name="dialog_message_are_you_sure_archive_list">Are you sure you want to archive this list?</string>
    <string name="dialog_message_do_you_want_to_copy">Do you want to copy this list?</string>
    <string name="toast_shopping_list_was_archived">Shopping List %s was archived.</string>


    <!-- Archived Lists in Active Lists -->
    <string name="button_footer_archived_lists">Archived Lists</string>


    <!--

     == Login and Create Account Strings ==

      -->
    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>


    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give the app permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>

    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>


    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Log Messages -->
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>

    <!--

     == Sharing Strings ==

      -->
    <!-- Activity Titles -->
    <string name="title_activity_share_list">Share List</string>
    <string name="title_activity_add_friend">Add Friend</string>

    <!-- Add a friend -->
    <string name="hint_enter_friends_email">Enter your friend\'s email</string>
    <string name="text_add_friend">Add New Friend</string>

    <!-- Toast Errors -->
    <string name="toast_is_already_your_friend">%s is already your friend!</string>
    <string name="toast_you_cant_add_yourself">You can\'t add yourself as a friend.</string>

    <!--

    == Settings Strings ==

    -->
    <!-- Activity Titles -->
    <string name="action_settings">Settings</string>

    <!-- Titles for Sort-->
    <string name="pref_title_sort_lists">Lists ordering</string>

    <!-- Preference Name -->
    <string name="pref_name_sort_order_lists">pref_sort_order_lists</string>

    <!-- Ordering Choices Labels : Lists -->
    <string name="pref_sort_list_label_sortType">Order by</string>
    <string name="pref_sort_list_label_publish_time_entry">Publish Time</string>
    <string name="pref_sort_list_label_list_name_entry">List Name</string>
    <string name="pref_sort_list_label_owner_entry">Owner Email</string>
    <string name="pref_sort_list_label_most_recently_changed_entry">Most Recently Changed</string>


    <!-- Values -->

    <string name="sort_by_publish_time_value">orderByPushKey</string>
    <string name="sort_by_list_name_value">listName</string>
    <string name="sort_by_owner_value">owner</string>
    <string name="sort_by_most_recent_changed_entry">timeStampLastUpdated/date</string>


    <!--User Validation-->
    <string name="user_email_not_verified">User Not Verified</string>
    <string name="resend_verification_email">Do you want us to resend the verification Email?</string>

    <!--User Profile-->

    <string name="user_profile">Profile</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_update_profile">UPDATE PROFILE</string>
    <string name="profile_user_verified">User Verified:&#160;</string>
    <string name="profile_user_verified_blank" >&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="profile_user_verified_true">Yes&#160;&#160;&#160;</string>
    <string name="profile_user_verified_false">No&#160;&#160;&#160;&#160;&#160;</string>
    <string name="profile_send_verification_email">Send Verification Email</string>
    <string name="profile_verified_your_email">Verified your email?</string>
    <string name="profile_finish_user_verification">Finish User Verification</string>
    <string name="user_not_found"> Error: User not available </string>
    <string name="validate">Validate</string>
    <string name="user_verified">User Verified!</string>
    <string name="error_validating_user">Couldn\'t validate user</string>
    <string name="update_password">Update Password</string>
    <string name="reauth_confirm_your_authentication_details">Please confirm your authentication details:</string>
    <string name="change_password">Change Password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_update_password_first">Please update password first!</string>
    <string name="error_no_update">No changes found</string>
    <string name="profile_updated">Profile updated</string>
    <string name="password_updated">Password updated</string>
    <string name="error_profile_update_request_not_completed">Your requested can\'t be completed</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="you_must_verify_your_email">You must verify your email</string>
    <string name="email_sent">Email Sent!</string>
    <string name="reset_password_email_sent">Email sent with information on how to reset password</string>


</resources>