<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_small"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mustVerifyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/you_must_verify_your_email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reauth_confirm_your_authentication_details" />

    <EditText
        android:id="@+id/re_auth_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_enter_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/re_auth_edit_text_password"
        android:padding="@dimen/edit_text_padding"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/login_buttons_text_size" />

    <EditText
        android:id="@+id/re_auth_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_enter_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/edit_text_padding"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/login_buttons_text_size" />
    <Button
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/re_auth_validate"
        style="@style/Widget.Custom.Button.Login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_field_height"
        android:background="@color/primary"
        android:text="@string/validate"
        android:textColor="@android:color/white" />

</LinearLayout>