<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.CreateAccountActivity">

    <LinearLayout
        android:id="@+id/linear_layout_create_account_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_text_username_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:background="@android:color/white"
            android:hint="@string/hint_enter_username"
            android:inputType="textCapWords"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />


        <EditText
            android:id="@+id/edit_text_email_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:background="@android:color/white"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />


        <EditText
            android:id="@+id/edit_text_password_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:background="@android:color/white"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />

        <Button
            android:id="@+id/btn_create_account_final"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:background="@color/primary"
            android:onClick="onCreateAccountPressed"
            android:text="@string/title_activity_create_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_already_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_sign_in"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignInPressed"
                android:text="@string/button_sign_in"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>