<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/edit_text_padding"
            android:text="@string/user_profile"
            android:textSize="@dimen/user_profile_heading_text_size" />

        <EditText
            android:id="@+id/profile_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/profile_edit_text_password"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />

        <!--<EditText-->
        <!--android:id="@+id/profile_edit_text_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/white"-->
        <!--android:hint="@string/hint_enter_email"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:nextFocusDown="@+id/profile_edit_text_password"-->
        <!--android:padding="@dimen/edit_text_padding"-->
        <!--android:textColor="@color/black"-->
        <!--android:textColorHint="@color/dark_grey"-->
        <!--android:textSize="@dimen/login_buttons_text_size" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:textStyle="bold"
                android:id="@+id/profile_text_view_email"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/profile_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/update_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/profile_edit_text_confirm_password"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size" />

        <EditText
            android:id="@+id/profile_edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/login_buttons_text_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/profile_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_send_verification_email"
            android:background="@color/primary"
            android:layout_gravity="end"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size"
            android:paddingLeft="@dimen/edit_text_padding"
            android:paddingRight="@dimen/edit_text_padding"
            android:visibility="gone"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile_user_verified"
                    android:textSize="@dimen/login_buttons_text_size" />

                <TextView
                    android:id="@+id/profile_userVerifiedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:text="@string/profile_user_verified_blank"
                    android:textSize="@dimen/login_buttons_text_size"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/profile_sendVerificationEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_send_verification_email"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:text="@string/profile_send_verification_email"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_buttons_text_size" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_finish_validation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:text="@string/profile_verified_your_email"
                    android:textSize="@dimen/login_buttons_text_size" />

                <Button
                    android:id="@+id/profile_reauthenticateUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_send_verification_email"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:text="@string/profile_finish_user_verification"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_buttons_text_size" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/profile_update_profile"
            style="@style/Widget.Custom.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/primary"
            android:text="@string/button_update_profile"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>